test/functional/failtests/typeChecking/tupleLiteral.txt
TypeError: tuple<bool,float,bool> found where tuple<int,int,int> was expected
1 | tuple<int, int, int>:foo = [: false, 1.2, false];
  |                            ^ (1:28)
2 | 

